loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:13: error: missing parameter type
  if(x=>3)
     ^